samples/_failures_safe/1761794014_517603_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b8f6f01.c: In function ‘main’:
./samples/SAFE/__tmp_6b8f6f01.c:126:12: error: missing terminating " character
  126 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_6b8f6f01.c:126:5: error: expected expression at end of input
  126 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_6b8f6f01.c:126:5: error: expected declaration or statement at end of input
